feat: add detail endpoint to bff
